--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "vercel-build": "next build"
-    
+    "vercel-build": "next build",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+
 
   },
   "dependencies": {
